# astra

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  cc.txt  justfile  package.json  pnpm-lock.yaml  run-dev.sh  vite.config.ts  wrangler.jsonc
.claude/projects/-home-erewhon-Projects-erewhon-astra/memory/: project_clerk_setup.md  project_sharing_domain.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
.playwright-mcp/: page-2026-04-12T21-16-24-015Z.yml  page-2026-04-12T22-11-51-467Z.yml  page-2026-04-12T22-59-49-447Z.yml  page-2026-04-12T23-02-30-668Z.yml  page-2026-04-12T23-07-23-973Z.yml  page-2026-04-12T23-12-01-840Z.yml  page-2026-04-12T23-14-11-093Z.yml
landing/: index.html
legacy/: package-lock.json  package.json
legacy/ui/: package.json  pnpm-lock.yaml
legacy/ui/src/components/: StarMap.tsx  WeatherConditions.tsx  astronomy-todo-list.tsx  object-altitude-dialog.tsx  use-data-sync.tsx
python/: pyproject.toml
python/astra_astro/: __init__.py  altitude.py  catalog_query.py  image_process.py  plate_solve.py  simbad.py  skymap.py  target_classify.py
python/logs/: notification.json
python/tests/: test_altitude.py  test_catalog_query.py  test_image_process.py  test_simbad.py  test_target_classify.py
scripts/: compare_stretch.py  generate-ngc-catalog.cjs  generate_icon.py  release.sh  test_plate_solve.py
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/logs/: notification.json  stop.json
src-tauri/migrations/00000000000000_initial_schema/: down.sql  up.sql
src-tauri/migrations/20250101000000_collection_images/: down.sql  up.sql
src-tauri/migrations/20250102000000_add_image_thumbnail/: down.sql  up.sql
src-tauri/migrations/20250103000000_add_todo_tags/: down.sql  up.sql
src-tauri/migrations/20250104000000_add_collection_archived/: down.sql  up.sql
src-tauri/migrations/20250105000000_add_scanned_directories/: down.sql  up.sql
src-tauri/migrations/20250106000000_add_schedule_equipment/: down.sql  up.sql
src-tauri/migrations/20250107000000_add_image_fits_url/: down.sql  up.sql
src-tauri/migrations/20250108000000_add_image_blob_id/: down.sql  up.sql
src-tauri/src/: fits_variant.rs  lib.rs  state.rs
src-tauri/src/commands/: astronomy.rs  auto_import.rs  backup.rs  collections.rs  hoardfs.rs  image_process.rs  images.rs  library_scan.rs  mod.rs  plate_solve.rs  scan.rs  schedules.rs  share.rs  skymap.rs  targets.rs  tetra3_db.rs  todos.rs
src-tauri/src/db/: mod.rs  models.rs  repository.rs  schema.rs
src-tauri/src/python/: altitude.rs  image_process.rs  mod.rs  plate_solve.rs  simbad.rs  skymap.rs
src-tauri/src/share/: auth.rs  catalog_viewer.html  config.rs  credentials.rs  manifest.rs  mod.rs  s3_signer.rs  upload.rs  viewer.html  viewer.rs
src-tauri/src/stretch/: autocrop.rs  gradient.rs  mod.rs  mtf.rs  pipeline.rs
src/components/: AladinLite.tsx  AltitudeChart.tsx  CatalogCollectionView.tsx  CatalogObjectDialog.tsx  CollectFilesDialog.tsx  Layout.tsx  MoonImage.tsx  MoonPhase.tsx  ObjectAltitudeDialog.tsx  ProcessingDialog.tsx  RecommendationsPanel.tsx  SearchDialog.tsx  SkyMapSheet.tsx  SkyMapSidePanel.tsx  SlideshowConfigDialog.tsx  TopTargetsDialog.tsx
src/components/ui/: progress.tsx  sheet.tsx
src/contexts/: EquipmentContext.tsx  LocationContext.tsx
src/data/: equipment-catalog.json
src/hooks/: use-collections.ts  use-images.ts  use-schedules.ts  use-sky-map-images.ts  use-slideshow.ts  use-target-observations.ts  use-todos.ts  useSettings.ts
src/lib/: astronomy-utils.tsx  catalogs.ts  collection-utils.ts  ngc-catalog-data.ts  objectTypeMap.ts  recommendations.ts  sky-map-utils.ts
src/lib/tauri/: commands.ts
src/pages/: Admin.tsx  CollectionDetail.tsx  Collections.tsx  Home.tsx  ImageViewer.tsx  Images.tsx  Observations.tsx  Plan.tsx  Slideshow.tsx  Targets.tsx  Todo.tsx
ui/: package.json  pnpm-lock.yaml
viewer/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
viewer/src/: App.tsx  styles.css  types.ts  utils.ts
viewer/src/components/: Footer.tsx  Gallery.tsx  Header.tsx  Lightbox.tsx  Skeleton.tsx  Toolbar.tsx  TopBar.tsx
worker/: package.json  pnpm-lock.yaml  tsconfig.json  wrangler.jsonc
worker/migrations/: 0001_social_schema.sql
worker/src/: index.ts
worker/src/lib/: auth-nav.ts  r2.ts  social-widgets.ts  types.ts
worker/src/lib/kith/: curation.ts  graph.ts  index.ts  notifications.ts  types.ts
worker/src/middleware/: clerk.ts
worker/src/routes/: auth.ts  comments.ts  downloads.ts  explore.ts  gallery.ts  landing.ts  lists.ts  presign.ts  social.ts  upload.ts  web-auth.ts
