[project]
name = "astra-astro"
version = "0.1.0"
description = "Astronomy utilities for Astra observation log"
requires-python = ">=3.12,<3.14"
dependencies = [
    "astropy>=7.0",
    "astroquery>=0.4",
    "skyfield>=1.52",
    "numpy>=1.26",
    "starplot",
    "pillow>=12.1.0",
    "scipy>=1.16.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
]
platesolve = [
    "erewhon-astro>=0.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["astra_astro"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
