[package]
name = "astra"
version = "2026.2.0"
description = "Astronomy Observation Log - Tracks and organizes imaging sessions"
authors = ["erewhon"]
license = "GPL-3.0"
repository = ""
edition = "2021"

[lib]
name = "astra_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri core
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-geolocation = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database (SQLite with Diesel)
diesel = { version = "2", features = ["sqlite", "r2d2", "chrono"] }
diesel_migrations = "2"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
sha2 = "0.10"
thiserror = "2"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
walkdir = "2"

# Image handling
image = "0.25"
base64 = "0.22"

# FITS file parsing
fitrs = "0.5"

# Python integration
pyo3 = { version = "0.27", features = ["auto-initialize"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
